@@ -1,3 +1,6 @@
+== Transaction::Simple 1.4.0.1 / 2007.10.01
+* Fixed a simple bug with the #transaction method handling.
+
 == Transaction::Simple 1.4.0 / 2007.02.03
 
 * Adding a post-rewind hook (#_post_transaction_rewind) so that complex
